landing_page/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

button {
  font-family: Roboto, sans-serif;
  border: none;
  border-radius: 8px;
  background: #3b82f6;
  color: rgb(213, 229, 253);
  width: 100px;
  height: 2em;
  font-weight: 600;
  padding: 0 10px;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  gap: 20px;
}

a {
  text-decoration: none;
  color: #e5e7eb;
}

.nav a {
  font-size: 18px;
}

.header {
  height: 400px;
  background-color: #1f2937;
  display: flex;
  flex-direction: column;
}

.nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 12px 0;
  margin-bottom: 2em;
}

.logo-header {
  color: #f9faf8;
  font-size: 24px;
  font-weight: 600;
}

.header-info {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.header-info p {
  color: #e5e7eb;
}

.header-left-info {
  width: 500px;
}

.header-right-info img {
  width: 300px;
}

@media (max-width: 850px) {
  .header-right-info img {
    display: none;
  }
}

.box {
  border: 3px solid rgb(59, 130, 246);
  border-radius: 15px;
  padding: 16px;
  margin: 16px;
  width: 100px;
  height: 100px;
}

.card-section h1 {
  display: flex;
  justify-content: center;
}

.cards {
  display: flex;
  justify-content: center;
  gap: 20px;
  flex-wrap: wrap;
}

.card {
  width: 150px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.quote-section {
  height: 350px;
  background-color: rgb(229, 231, 235);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.italic-text {
  font-style: italic;
  font-size: 20px;
  width: 480px;
}

.author-text {
  width: 480px;
  text-align: end;
  font-weight: 750;
}

.sign-up-alert-section {
  display: flex;
  justify-content: center;
  align-items: center;
}

.blue-container {
  border: 3px solid rgb(59, 130, 246);
  background-color: rgb(59, 130, 246);
  border-radius: 15px;
  padding: 16px;
  margin: 40px;
  width: 40%;
  height: 70px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.text {
  color: #f9faf8;
  font-size: 18px;
  font-weight: 700;
}

.footer {
  height: 70px;
  background-color: #1f2937;
  color: #e5e7eb;
  display: flex;
  justify-content: center;
  align-items: center;
}

.blue-container button {
  border: 2px solid white;
}

